fix(STN-443): Sprint 20 QA (#665)
* fix(STN-443): email link hover state

* fix(STN-443): remove extra spacing in pill lists

* fix(STN-443): Fix background gradient of vertical linked card with no image in a well

* chore(STN-467): Setup backstop.js for sandbox site

* fix(STN-443): raised cards should have white background to help them stand out in wells

* refactor(STN-443): clean up the spacing system to allow for elements to be nested in rows without adding extra spacing

* refactor(STN-443): cleanup and a little bit of padding on grid items

* chore(STN-443): compiled CSS

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
@@ -1,5 +1,4 @@
 .hb-card {
-  margin-bottom: hb-spacing-width();
   display: flex;
   flex-direction: column;
 
@@ -277,6 +276,10 @@
     }
   }
 
+  .field-media-image {
+    margin: 0;
+  }
+
   &__date-tile {
     text-align: center;
     margin-right: hb-spacing-width();
@@ -312,6 +315,7 @@
     &:only-child {
       position: relative;
       bottom: auto;
+      left: auto;
     }
   }
 
